# cis6930sp25-project2

cis6930sp25-project2/: COLLABORATORS (1).md  main.py  pyproject.toml
cis6930sp25-project2/project2.egg-info/: PKG-INFO  SOURCES.txt
cis6930sp25-project2/redacted/: stats.tsv
cis6930sp25-project2/tests/: tests_coref.py  tests_ner.py  tests_token.py
