[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Anshita Rayalla", email = "anshita.rayalla@ufl.edu"}]
name = "project2"
description = "Project One from Anshita382 -- Spring 2025"
version = "1.0"
readme = "README.md"
dependencies = []

[project.urls]
Task = "https://ufdatastudio.com/cis6930sp25/project/2"
repository = "https://github.com/Anshita382/cis6930sp25-project2"

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
